# induction-heads-experiment

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
apps/: induction_heads.py
induction_heads_experiment/: data.py  logger.py  model.py  tokenizer.py  train.py
