[tool.poetry]
name = "training-interpretability"
version = "0.1.0"
description = "Training interpretability tooling"
authors = ["Robert Krzyzanowski"]
license = "MIT"
readme = "README.md"
packages = [{include = "training_interpretability"}]

[tool.poetry.dependencies]
python = "^3.9.9"
apache-beam = "==2.50.0"
mwparserfromhell = "*"
debugpy = "==1.8.0"
safetensors = "==0.3.3"
datasets = "^2.0.0"
transformers = "^4.28.1"
torch = "^2.0.0"
torchdata = "^0.6.0"
torchtext = "^0.15.1"
portalocker = "^2.7.0"
ipykernel = "^6.22.0"
pandas = "^2.0.1"
ipywidgets = "^8.0.6"
seaborn = "^0.12.2"
networkx = "^3.1"
scipy = "^1.10.1"
einops = "^0.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
